[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/art/interactive/interactive/BalltoyFinished.png" type="Texture" id=1]
[ext_resource path="res://assets/art/interactive/interactive/Balltoy.png" type="Texture" id=2]
[ext_resource path="res://scenes/interact/BallToy.gd" type="Script" id=3]
[ext_resource path="res://scenes/interact/Button.tscn" type="PackedScene" id=4]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 43.5, 44 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 35, 35 )

[node name="BallToy" type="Node2D"]
script = ExtResource( 3 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 45, 50 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 1.5, 1 )
shape = SubResource( 2 )

[node name="Balltoy" type="Sprite" parent="Area2D"]
texture = ExtResource( 2 )

[node name="BalltoyFinished" type="Sprite" parent="Area2D"]
visible = false
texture = ExtResource( 1 )

[node name="Button" parent="Area2D" instance=ExtResource( 4 )]
position = Vector2( -50, -75 )

[node name="StaticBody2D" type="StaticBody2D" parent="Area2D"]
position = Vector2( -45, -50 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D/StaticBody2D"]
position = Vector2( 45, 50 )
shape = SubResource( 1 )

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
